update endpoints